Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#16268 closed bug (fixed)

Preferences/Input Crash when clicking button 4 or 5 on mouse image

Reported by: rrobgill Owned by: PreetpalKaur
Priority: normal Milestone: R1/beta3
Component: Preferences/Input Version: R1/beta2
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by rrobgill)

When clicking on buttons 4 or 5 (labelled D/R) on the image of the mouse, the input preflet crashes, rather than the popup to remap the buttons.

hrev54328 on x86_64

The crash appears to be due to no default mappings for the recently added buttons 4 and 5.

(Duplicate of #16223)

Attachments (1)

Input-456-debug-17-06-2020-02-12-21.report (22.0 KB ) - added by rrobgill 5 years ago.
Crashreport

Download all attachments as: .zip

Change History (7)

by rrobgill, 5 years ago

Crashreport

comment:2 by rrobgill, 5 years ago

Description: modified (diff)

comment:3 by waddlesplash, 5 years ago

Blocked By: 16223 added

comment:4 by waddlesplash, 5 years ago

Blocked By: 16223 removed

comment:5 by waddlesplash, 5 years ago

Resolution: fixed
Status: newclosed

Fix merged in hrev54330. Thanks!

comment:6 by pulkomandy, 5 years ago

Milestone: UnscheduledR1/beta3

Move closed tickets into beta3 milestone

Note: See TracTickets for help on using tickets.