preferences/input Add default mappings to mouse buttons 4/5

* Adds default mappings to newly added buttons 4 and 5

* Include mappings of buttons 4 and 5 in settings dump

* Fixes Bug #16268

Signed-off-by: Rob Gill <rrobgill@protonmail.com>
Change-Id: If466088e622a9e818f9eb7bd67c3a65154b9ad37
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2924
Reviewed-by: waddlesplash <waddlesplash@gmail.com>